JDK 11 Plugin Management